Improved contrast of tab outline Updated Post Social Share block to use a button instead of anchor element for better keyboard navigation Changed Post Hazard Title to not use hazard color (possible bad contrast) and to use paragraph element instead of h2 for better heading hierarchy Fixed various other accessibility issues in patterns

--- a/src/Bcgov/EmergencyInfo/blocks/post-social-share/style.scss
+++ b/src/Bcgov/EmergencyInfo/blocks/post-social-share/style.scss
@@ -1,6 +1,6 @@
 .wp-block-emergency-info-post-social-share {
 
-    .btn {
+    button {
         border-width: 2px;
         border-radius: 50px !important;
         background-color: var(--wp--preset--color--white);
