--- a/src/styles/bootstrap-theming.scss
+++ b/src/styles/bootstrap-theming.scss
@@ -3,5 +3,6 @@ $secondary: #3b5a94;
 $dark: #272738;
 
 $link-color: $dark;
+$body-color: $dark;
 
 @import "bootstrap/scss/bootstrap";
